--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:id="@+id/topHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@color/parchment_light"
             android:padding="8dp">
 
             <!-- Date Button -->
@@ -27,7 +27,8 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="4dp"
                 android:text="@string/date_placeholder"
-                android:textColor="@android:color/white" />
+                android:background="@drawable/custom_button"
+                android:textColor="@android:color/black" />
 
             <!-- Share Button -->
             <Button
@@ -36,7 +37,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:text="@string/share_placeholder"
-                android:textColor="@android:color/white" />
+                android:background="@drawable/custom_button"
+                android:textColor="@android:color/black" />
 
             <!-- Text View -->
             <TextView
@@ -64,13 +66,16 @@
             android:layout_weight="1"
             android:clipToPadding="false"
             android:paddingTop="8dp"
-            android:paddingBottom="8dp" />
+            android:paddingBottom="8dp"
+            android:background="@color/parchment_light"
+            />
 
         <!-- Bottom Header -->
         <RelativeLayout
             android:id="@+id/bottomHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/parchment_light"
             android:padding="8dp">
 
             <TextView
