--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,17 @@
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_700">#DCCDAB</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red_main">#EA3232</color>
     <color name="red_support">#E50000</color>
+    <color name="parchment">#FDF5E6</color>
+    <color name="parchment_dark">#E6D5B8</color>
+    <color name="parchment_light">#FDFCF8</color>
+    <color name="parchment_rose">#FFE6CC</color>
+    <color name="parchment_gray">#D8D4CB</color>
+    <color name="parchment_dark_status_bar">#DCCDAB</color>
 </resources>
