--- a/app/src/main/res/drawable/custom_button_solid.xml
+++ b/app/src/main/res/drawable/custom_button_solid.xml
@@ -1,9 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient
-        android:endColor="@color/parchment_light"
-        android:startColor="@color/parchment_dark" />
+    <solid android:color="@color/parchment_solid_button"/>
     <corners android:radius="12dp"/>
+    <stroke android:color="@color/parchment_dark" android:width="1dp"/>
     <padding android:left="16dp" android:right="16dp"
-        android:top="4dp" android:bottom="4dp"/>
+        android:top="0dp" android:bottom="0dp"/>
 </shape>
