--- a/app/src/main/res/layout/dialog_no_internet.xml
+++ b/app/src/main/res/layout/dialog_no_internet.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="@color/white">
+    android:background="@drawable/custom_popup_window">
 
     <TextView
         android:layout_width="wrap_content"
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:text="@string/ok"
         android:layout_gravity="center_horizontal"
+        android:background="@drawable/custom_button_solid"
         android:layout_marginTop="16dp"/>
 
 </LinearLayout>
