--- a/app/src/main/res/layout/activity_thank_you.xml
+++ b/app/src/main/res/layout/activity_thank_you.xml
@@ -23,7 +23,7 @@
         android:id="@+id/thank_you_text_view_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Спасибо!"
+        android:text="@string/thank_you"
         android:textSize="28sp"
         android:textStyle="bold"
         android:textColor="@color/black"
@@ -36,7 +36,7 @@
         android:id="@+id/thank_you_text_view_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ваш ответ поможет сделать это приложение лучше."
+        android:text="@string/your_answer_makes_this_app_better"
         android:textSize="18sp"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
@@ -50,7 +50,7 @@
         android:id="@+id/close_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Начать работу"
+        android:text="@string/start_work"
         android:textSize="18sp"
         android:layout_below="@id/thank_you_text_view_2"
         android:layout_centerHorizontal="true"
