--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -28,7 +28,7 @@
         android:id="@+id/title_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Здравствуйте!"
+        android:text="@string/hello"
         android:textSize="28sp"
         android:textColor="@color/black"
         android:layout_centerHorizontal="true"
@@ -53,7 +53,7 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/custom_button"
+        android:background="@drawable/custom_button_solid"
         android:text="@string/start_button_text"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="18dp"
