--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/parchment_light"
-    >
+    android:background="@color/parchment_light">
 
     <!-- Theme radio group -->
     <TextView
@@ -20,7 +19,6 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"/>
 
-    <!-- Error switch -->
     <RadioGroup
         android:id="@+id/theme_radio_group"
         android:layout_width="wrap_content"
@@ -47,6 +45,7 @@
 
     </RadioGroup>
 
+    <!-- Error switch -->
     <TextView
         android:id="@+id/error_textview"
         android:layout_width="wrap_content"
@@ -103,9 +102,10 @@
         android:textSize="20sp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:background="@drawable/custom_button"
+        android:background="@drawable/custom_button_solid"
         android:layout_marginBottom="20dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
