--- a/app/src/main/res/layout/row_my_list_item.xml
+++ b/app/src/main/res/layout/row_my_list_item.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -9,13 +10,14 @@
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:orientation="vertical"
-        android:paddingRight="16dp">
+        android:paddingEnd="16dp"
+        tools:ignore="RtlSymmetry">
 
         <TextView
             android:id="@+id/headerTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ObjectPlaceHolder"
+            android:text="@string/objectplaceholder"
             android:textStyle="bold" />
 
         <TextView
@@ -23,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Homework PlaceHolder"
+            android:text="@string/homework_placeholder"
             />
 
     </LinearLayout>
@@ -35,7 +37,7 @@
         android:layout_weight="1"
         android:gravity="right|center_vertical"
         android:textStyle="bold"
-        android:text="5"
-        />
+        android:text="@string/_5"
+        tools:ignore="RtlHardcoded" />
 
 </LinearLayout>
