First ever stable version of my app It now can connect to the server and display diary entries. I will fix empty parts soon.
Also now LoginActivity starts first

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,6 +29,10 @@
         <!-- Status bar color -->
         <item name="android:statusBarColor">#1E2124</item>
     </style>
+    <!-- Theme.AppCompat.Light.Dialog -->
+    <style name="DialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">#C8AC79</item>
+    </style>
 
 
 
