--- a/app/src/main/res/drawable/custom_popup_window.xml
+++ b/app/src/main/res/drawable/custom_popup_window.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/parchment_light"/>
     <corners android:radius="12dp"/>
+    <stroke android:width="2dp" android:color="@color/parchment_dark"/>
 </shape>
