--- a/app/src/main/res/layout/activity_syrvey.xml
+++ b/app/src/main/res/layout/activity_syrvey.xml
@@ -129,7 +129,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="48dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/custom_button" />
+            android:background="@drawable/custom_button_solid" />
 
     </LinearLayout>
 
