--- a/app/src/main/res/layout/dialog_no_internet.xml
+++ b/app/src/main/res/layout/dialog_no_internet.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:text="@string/no_internet_connection_2"
         android:textSize="16sp"
+        android:textAlignment="center"
         android:layout_gravity="center_horizontal"/>
 
     <Button
